[gd_scene load_steps=10 format=3 uid="uid://c3l11pl8gnxo6"]

[ext_resource type="Script" path="res://Logica/game_start.gd" id="1_d1quh"]
[ext_resource type="Texture2D" uid="uid://bqhqrdsnv5ssl" path="res://Sprites/titulo gem frenzy.png" id="2_p55nl"]
[ext_resource type="Texture2D" uid="uid://dli826d166f58" path="res://Sprites/Menu/country-platform-preview.png" id="3_26vto"]
[ext_resource type="Theme" uid="uid://oxc82qrj3ssc" path="res://Escenas/UI.tres" id="4_ruh65"]
[ext_resource type="AudioStream" uid="uid://dvbgoj0grjxq" path="res://Musica/Maple_Meadows_1-_1_.wav" id="4_ued5s"]
[ext_resource type="Theme" uid="uid://clelhxjmf0n48" path="res://Sprites/Menu/botonamarillo.tres" id="5_lnpde"]
[ext_resource type="Texture2D" uid="uid://dpw07nqavv2a5" path="res://Sprites/UI/Icon_SoundOff.png" id="6_fsfk8"]
[ext_resource type="Texture2D" uid="uid://ctdivsxessfxp" path="res://Sprites/UI/yes.png" id="7_kg6s8"]

[sub_resource type="Theme" id="Theme_uhrti"]
Label/colors/font_outline_color = Color(0.254902, 0.133333, 0.12549, 1)

[node name="GameStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ruh65")
script = ExtResource("1_d1quh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.051
anchor_right = 0.876
anchor_bottom = 0.554
offset_left = 17.32
offset_top = -46.72
offset_right = 14.04
offset_bottom = -48.88
texture = ExtResource("2_p55nl")

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_26vto")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.428
anchor_right = 1.0
anchor_bottom = 0.997
offset_left = 2.0
offset_top = 73.84
offset_right = -2.0
offset_bottom = -79.84

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Btn_jugar" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 64)
layout_mode = 2
theme = ExtResource("5_lnpde")
theme_override_font_sizes/font_size = 32
text = "JUGAR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ued5s")
volume_db = -12.0
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(907, 52)
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_fsfk8")

[node name="Btn_toggle_sound" type="Button" parent="."]
layout_mode = 0
offset_left = 845.0
offset_right = 959.0
offset_bottom = 110.0
flat = true

[node name="tutorial" type="Sprite2D" parent="."]
position = Vector2(917, 255)
scale = Vector2(2, 2)
texture = ExtResource("7_kg6s8")

[node name="Tutorial" type="Label" parent="."]
layout_mode = 0
offset_left = 747.0
offset_top = 246.0
offset_right = 892.0
offset_bottom = 276.0
theme = SubResource("Theme_uhrti")
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Tutorial"

[node name="Btn_toggle_Tutorial" type="Button" parent="."]
layout_mode = 0
offset_left = 745.0
offset_top = 240.0
offset_right = 933.0
offset_bottom = 268.0
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Btn_jugar" to="." method="_on_btn_jugar_pressed"]
[connection signal="pressed" from="Btn_toggle_sound" to="." method="_on_btn_toggle_sound_pressed"]
[connection signal="pressed" from="Btn_toggle_Tutorial" to="." method="_on_btn_toggle_tutorial_pressed"]
